k8s/queue.yml
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: queue
    service: queue
spec:
  selector:
    app: queue
  clusterIP: None
  ports:
    - port: 6379
      name: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: queue
spec:
  selector:
    matchLabels:
      app: queue
  serviceName: queue
  replicas: 1
  template:
    metadata:
      labels:
        app: queue
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: redis
          image: redis:5
          ports:
            - containerPort: 6379
              name: redis
