k8s/shipping.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
    service: shipping
spec:
  selector:
    app: shipping
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipping
  template:
    metadata:
      labels:
        app: shipping
        version: v1
    spec:
      serviceAccountName: raptorslog-shipping
      containers:
        - name: shipping-service
          image: docker.io/augustopimenta/raptorslog-shipping-service:v1.0
