k8s/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: raptorslog-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: raptorslog
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
      exact: /order
    route:
    - destination:
        host: order
        port:
          number: 80
