k8s/order.yml
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app: order
    service: order
spec:
  selector:
    app: order
  type: NodePort
  ports:
    - port: 80
      name: web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: order
spec:
  backend:
    serviceName: order
    servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
        version: v1
    spec:
      serviceAccountName: raptorslog-order
      containers:
        - name: order-service
          image: docker.io/augustopimenta/raptorslog-order-service:v1.0
          ports:
            - containerPort: 80
              name: web
